--- a/hyperapp/ui/qt/menu_bar.tests.resources.yaml
+++ b/hyperapp/ui/qt/menu_bar.tests.resources.yaml
@@ -4,6 +4,7 @@ import:
 - common.context:context.module
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
+- ui.command_hub:command_hub.module
 associations: []
 definitions:
   menu_bar.tests.module:
@@ -11,8 +12,8 @@ definitions:
     module_name: menu_bar.tests
     file_name: menu_bar.tests.dyn.py
     import_list:
+      code.command_hub: ui.command_hub:command_hub.module
       code.context: common.context:context.module
-      tested.code.command_hub: phony
       tested.code.menu_bar: phony
   phony:
     _type: legacy_type.phony:phony
