--- a/hyperapp/ui/qt/tree.resources.yaml
+++ b/hyperapp/ui/qt/tree.resources.yaml
@@ -7,6 +7,7 @@ import:
 - legacy_type.ui:ui_ctl
 - ui.ui_adapter_creg:ui_adapter_creg.service
 - ui.ui_ctl_registry:ui_ctl_creg.service
+- ui.view:view.module
 associations:
 - bases:
   - legacy_type.tree:view
@@ -32,4 +33,5 @@ definitions:
     module_name: tree
     file_name: tree.dyn.py
     import_list:
+      code.view: ui.view:view.module
       services.ui_adapter_creg: ui.ui_adapter_creg:ui_adapter_creg.service
