--- a/hyperapp/rc/import_driver.resources.yaml
+++ b/hyperapp/rc/import_driver.resources.yaml
@@ -3,6 +3,7 @@ import:
 - builtins:pyobj_creg.service
 - legacy_type.builtin:python_module
 - legacy_type.inspect:attr
+- legacy_type.inspect:class_attr
 - legacy_type.inspect:fn_attr
 - legacy_type.inspect:generator_fn_attr
 - legacy_type.inspect:imported_module_info
@@ -17,6 +18,7 @@ definitions:
     file_name: import_driver.dyn.py
     import_list:
       htypes.inspect.attr: legacy_type.inspect:attr
+      htypes.inspect.class_attr: legacy_type.inspect:class_attr
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.inspect.generator_fn_attr: legacy_type.inspect:generator_fn_attr
       htypes.inspect.imported_module_info: legacy_type.inspect:imported_module_info
