--- a/hyperapp/rc/unit.resources.yaml
+++ b/hyperapp/rc/unit.resources.yaml
@@ -6,6 +6,7 @@ import:
 - legacy_type.builtin:import_rec
 - legacy_type.builtin:python_module
 - legacy_type.import_discoverer:using_incomplete_object
+- legacy_type.inspect:class_attr
 - legacy_type.inspect:fn_attr
 - legacy_type.inspect:import_recorder
 - legacy_type.rc:source_dep
@@ -30,6 +31,7 @@ definitions:
       htypes.builtin.import_rec: legacy_type.builtin:import_rec
       htypes.builtin.python_module: legacy_type.builtin:python_module
       htypes.import_discoverer.using_incomplete_object: legacy_type.import_discoverer:using_incomplete_object
+      htypes.inspect.class_attr: legacy_type.inspect:class_attr
       htypes.inspect.fn_attr: legacy_type.inspect:fn_attr
       htypes.inspect.import_recorder: legacy_type.inspect:import_recorder
       htypes.rc.source_dep: legacy_type.rc:source_dep
