--- a/hyperapp/rc/ui_ctl.resources.yaml
+++ b/hyperapp/rc/ui_ctl.resources.yaml
@@ -7,9 +7,12 @@ import:
 - legacy_type.builtin:legacy_type
 - legacy_type.builtin:python_module
 - legacy_type.inspect:data_t
+- legacy_type.inspect:object_t
 - legacy_type.ui:fn_impl
 - legacy_type.ui:model_command
+- legacy_type.ui:model_command_enumerator
 - legacy_type.ui:model_command_d
+- legacy_type.ui:model_command_enumerator_d
 - legacy_type.ui:global_model_command_d
 - legacy_type.ui:list_ui_t
 - legacy_type.ui:tree_ui_t
@@ -29,10 +32,13 @@ definitions:
       htypes.builtin.call: legacy_type.builtin:call
       htypes.builtin.legacy_type: legacy_type.builtin:legacy_type
       htypes.inspect.data_t: legacy_type.inspect:data_t
+      htypes.inspect.object_t: legacy_type.inspect:object_t
       htypes.ui.list_ui_t: legacy_type.ui:list_ui_t
       htypes.ui.tree_ui_t: legacy_type.ui:tree_ui_t
       htypes.ui.fn_impl: legacy_type.ui:fn_impl
       htypes.ui.model_command: legacy_type.ui:model_command
+      htypes.ui.model_command_enumerator: legacy_type.ui:model_command_enumerator
+      htypes.ui.model_command_enumerator_d: legacy_type.ui:model_command_enumerator_d
       htypes.ui.model_command_d: legacy_type.ui:model_command_d
       htypes.ui.global_model_command_d: legacy_type.ui:global_model_command_d
       htypes.ui.model: legacy_type.ui:model
