--- a/hyperapp/ui/model_command.resources.yaml
+++ b/hyperapp/ui/model_command.resources.yaml
@@ -14,6 +14,7 @@ import:
 - legacy_type.ui:model
 - legacy_type.ui:model_command
 - legacy_type.ui:model_command_d
+- legacy_type.ui:model_command_enumerator_d
 - legacy_type.ui:model_d
 - resource.data_to_res:data_to_res.service
 - ui.model_command_creg:model_command_creg.service
@@ -40,6 +41,7 @@ definitions:
       htypes.ui.global_model_command_d: legacy_type.ui:global_model_command_d
       htypes.ui.model_command: legacy_type.ui:model_command
       htypes.ui.model_command_d: legacy_type.ui:model_command_d
+      htypes.ui.model_command_enumerator_d: legacy_type.ui:model_command_enumerator_d
       services.association_reg: builtins:association_reg.service
       services.data_to_res: resource.data_to_res:data_to_res.service
       services.model_command_creg: ui.model_command_creg:model_command_creg.service
