--- a/hyperapp/ui/qt/window.resources.yaml
+++ b/hyperapp/ui/qt/window.resources.yaml
@@ -5,7 +5,10 @@ import:
 - builtins:web.service
 - common.mark:mark.service
 - legacy_type.builtin:attribute
+- legacy_type.builtin:call
 - legacy_type.builtin:python_module
+- legacy_type.root:view
+- legacy_type.ui:ui_command_d
 - legacy_type.ui:ui_ctl
 - legacy_type.window:layout
 - legacy_type.window:pos
@@ -20,6 +23,13 @@ associations:
   - ui.ui_ctl_registry:ui_ctl_creg.service
   - legacy_type.window:layout
   value: WindowView.from_piece.ctl
+- bases:
+  - ui_command_d
+  - legacy_type.root:view
+  key:
+  - ui_command_d
+  - legacy_type.root:view
+  value: duplicate_window
 definitions:
   WindowView:
     _type: legacy_type.builtin:attribute
@@ -33,12 +43,20 @@ definitions:
     _type: legacy_type.ui:ui_ctl
     ctr_fn: WindowView.from_piece
     command_methods: []
+  duplicate_window:
+    _type: legacy_type.builtin:attribute
+    object: window.module
+    attr_name: duplicate_window
+  ui_command_d:
+    _type: legacy_type.builtin:call
+    function: legacy_type.ui:ui_command_d
   window.module:
     _type: legacy_type.builtin:python_module
     module_name: window
     file_name: window.dyn.py
     import_list:
       code.view: ui.view:view.module
+      htypes.root.view: legacy_type.root:view
       htypes.window.layout: legacy_type.window:layout
       htypes.window.pos: legacy_type.window:pos
       htypes.window.size: legacy_type.window:size
