--- a/hyperapp/ui/qt/tree.resources.yaml
+++ b/hyperapp/ui/qt/tree.resources.yaml
@@ -1,6 +1,7 @@
 # Automatically generated file. Do not edit.
 
 import:
+- common.tree_diff:tree_diff.module
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.tree:view
@@ -33,5 +34,6 @@ definitions:
     module_name: tree
     file_name: tree.dyn.py
     import_list:
+      code.tree_diff: common.tree_diff:tree_diff.module
       code.view: ui.view:view.module
       services.ui_adapter_creg: ui.ui_adapter_creg:ui_adapter_creg.service
