--- a/hyperapp/ui/qt/tree_adapter.resources.yaml
+++ b/hyperapp/ui/qt/tree_adapter.resources.yaml
@@ -3,9 +3,11 @@
 import:
 - builtins:pyobj_creg.service
 - builtins:web.service
+- common.tree_diff:tree_diff.module
 - legacy_type.builtin:attribute
 - legacy_type.builtin:python_module
 - legacy_type.tree_adapter:fn_index_tree_adapter
+- ui.qt.tree:tree.module
 - ui.ui_adapter_creg:ui_adapter_creg.service
 associations:
 - bases:
@@ -29,5 +31,7 @@ definitions:
     module_name: tree_adapter
     file_name: tree_adapter.dyn.py
     import_list:
+      code.tree: ui.qt.tree:tree.module
+      code.tree_diff: common.tree_diff:tree_diff.module
       services.pyobj_creg: builtins:pyobj_creg.service
       services.web: builtins:web.service
