--- a/hyperapp/ui/sample_tree.resources.yaml
+++ b/hyperapp/ui/sample_tree.resources.yaml
@@ -1,6 +1,7 @@
 # Automatically generated file. Do not edit.
 
 import:
+- common.tree_diff:tree_diff.module
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
@@ -90,6 +91,7 @@ definitions:
     module_name: sample_tree
     file_name: sample_tree.dyn.py
     import_list:
+      code.tree_diff: common.tree_diff:tree_diff.module
       htypes.sample_tree.feed_sample_tree: legacy_type.sample_tree:feed_sample_tree
       htypes.sample_tree.item: legacy_type.sample_tree:item
       htypes.sample_tree.sample_tree: legacy_type.sample_tree:sample_tree
