--- a/hyperapp/ui/qt/window.resources.yaml
+++ b/hyperapp/ui/qt/window.resources.yaml
@@ -3,6 +3,7 @@
 import:
 - builtins:mosaic.service
 - builtins:web.service
+- common.list_diff:list_diff.module
 - common.mark:mark.service
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
@@ -55,6 +56,7 @@ definitions:
     module_name: window
     file_name: window.dyn.py
     import_list:
+      code.list_diff: common.list_diff:list_diff.module
       code.view: ui.view:view.module
       htypes.root.view: legacy_type.root:view
       htypes.window.layout: legacy_type.window:layout
