--- a/hyperapp/ui/qt/controller.tests.resources.yaml
+++ b/hyperapp/ui/qt/controller.tests.resources.yaml
@@ -3,6 +3,7 @@
 import:
 - builtins:mosaic.service
 - common.context:context.module
+- common.list_diff:list_diff.module
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
 associations: []
@@ -13,6 +14,7 @@ definitions:
     file_name: controller.tests.dyn.py
     import_list:
       code.context: common.context:context.module
+      code.list_diff: common.list_diff:list_diff.module
       services.mosaic: builtins:mosaic.service
       tested.code.controller: phony
   phony:
