--- a/hyperapp/ui/qt/text.resources.yaml
+++ b/hyperapp/ui/qt/text.resources.yaml
@@ -54,5 +54,7 @@ definitions:
     file_name: text.dyn.py
     import_list:
       code.view: ui.view:view.module
+      htypes.text.edit_layout: legacy_type.text:edit_layout
       htypes.text.state: legacy_type.text:state
+      htypes.text.view_layout: legacy_type.text:view_layout
       services.ui_adapter_creg: ui.ui_adapter_creg:ui_adapter_creg.service
