--- a/hyperapp/ui/controller.resources.yaml
+++ b/hyperapp/ui/controller.resources.yaml
@@ -8,6 +8,7 @@ import:
 - legacy_type.builtin:call
 - legacy_type.builtin:none
 - legacy_type.builtin:python_module
+- legacy_type.layout:command_item
 - legacy_type.layout:command_list
 - legacy_type.layout:item
 - legacy_type.layout:view
@@ -15,6 +16,7 @@ import:
 - legacy_type.root:view
 - legacy_type.ui:fn_impl
 - legacy_type.ui:global_model_command_d
+- legacy_type.ui:list_ui_t
 - legacy_type.ui:model
 - legacy_type.ui:model_command
 - legacy_type.ui:model_command_d
@@ -31,6 +33,18 @@ associations:
   - global_model_command_d
   key: global_model_command_d
   value: open_layout_tree.command
+- bases:
+  - legacy_type.layout:command_list
+  key:
+  - model_command_d
+  - legacy_type.layout:command_list
+  value: layout_item_commands.command
+- bases:
+  - legacy_type.layout:command_list
+  key:
+  - model_d
+  - legacy_type.layout:command_list
+  value: layout_item_commands.model
 - bases:
   - legacy_type.layout:view
   key:
@@ -58,6 +72,7 @@ definitions:
       code.command_hub: ui.command_hub:command_hub.module
       code.list_diff: common.list_diff:list_diff.module
       code.view: ui.view:view.module
+      htypes.layout.command_item: legacy_type.layout:command_item
       htypes.layout.command_list: legacy_type.layout:command_list
       htypes.layout.item: legacy_type.layout:item
       htypes.layout.view: legacy_type.layout:view
@@ -70,6 +85,26 @@ definitions:
   global_model_command_d:
     _type: legacy_type.builtin:call
     function: legacy_type.ui:global_model_command_d
+  layout_item_commands:
+    _type: legacy_type.builtin:attribute
+    object: controller.module
+    attr_name: layout_item_commands
+  layout_item_commands.command:
+    _type: legacy_type.ui:model_command
+    function: layout_item_commands
+    params:
+    - piece
+  layout_item_commands.impl:
+    _type: legacy_type.ui:fn_impl
+    function: layout_item_commands
+    want_feed: false
+  layout_item_commands.model:
+    _type: legacy_type.ui:model
+    ui_t: layout_item_commands.ui_t
+    impl: layout_item_commands.impl
+  layout_item_commands.ui_t:
+    _type: legacy_type.ui:list_ui_t
+    element_t: legacy_type.layout:command_item
   layout_tree:
     _type: legacy_type.builtin:attribute
     object: controller.module
