--- a/hyperapp/client/client.resources.yaml
+++ b/hyperapp/client/client.resources.yaml
@@ -3,6 +3,7 @@
 import:
 - builtins:mosaic.service
 - common.context:context.module
+- legacy_type.auto_tabs:view
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
@@ -44,6 +45,7 @@ definitions:
       code.context: common.context:context.module
       code.controller: ui.controller:controller.module
       code.model_command: ui.model_command:model_command.module
+      htypes.auto_tabs.view: legacy_type.auto_tabs:view
       htypes.menu_bar.layout: legacy_type.menu_bar:layout
       htypes.menu_bar.state: legacy_type.menu_bar:state
       htypes.navigator.layout: legacy_type.navigator:layout
