--- a/hyperapp/ui/qt/auto_tabs.resources.yaml
+++ b/hyperapp/ui/qt/auto_tabs.resources.yaml
@@ -1,12 +1,14 @@
 # Automatically generated file. Do not edit.
 
 import:
+- builtins:web.service
 - common.list_diff:list_diff.module
 - common.mark:mark.service
 - legacy_type.auto_tabs:view
 - legacy_type.builtin:attribute
 - legacy_type.builtin:call
 - legacy_type.builtin:python_module
+- legacy_type.navigator:layout
 - legacy_type.tabs:layout
 - legacy_type.tabs:tab
 - legacy_type.ui:ui_command_d
@@ -55,10 +57,12 @@ definitions:
       code.list_diff: common.list_diff:list_diff.module
       code.wrapper_view: ui.wrapper_view:wrapper_view.module
       htypes.auto_tabs.view: legacy_type.auto_tabs:view
+      htypes.navigator.layout: legacy_type.navigator:layout
       htypes.tabs.layout: legacy_type.tabs:layout
       htypes.tabs.tab: legacy_type.tabs:tab
       services.mark: common.mark:mark.service
       services.ui_ctl_creg: ui.ui_ctl_registry:ui_ctl_creg.service
+      services.web: builtins:web.service
   close_tab:
     _type: legacy_type.builtin:attribute
     object: auto_tabs.module
