--- a/hyperapp/ui/qt/controller.tests.resources.yaml
+++ b/hyperapp/ui/qt/controller.tests.resources.yaml
@@ -6,6 +6,7 @@ import:
 - common.list_diff:list_diff.module
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
+- ui.view:view.module
 associations: []
 definitions:
   controller.tests.module:
@@ -15,6 +16,7 @@ definitions:
     import_list:
       code.context: common.context:context.module
       code.list_diff: common.list_diff:list_diff.module
+      code.view: ui.view:view.module
       services.mosaic: builtins:mosaic.service
       tested.code.controller: phony
   phony:
