--- a/hyperapp/ui/qt/tabs.tests.resources.yaml
+++ b/hyperapp/ui/qt/tabs.tests.resources.yaml
@@ -8,6 +8,7 @@ import:
 - legacy_type.builtin:python_module
 - legacy_type.phony:phony
 - ui.command_hub:command_hub.module
+- ui.view:view.module
 associations: []
 definitions:
   phony:
@@ -20,6 +21,7 @@ definitions:
       code.command_hub: ui.command_hub:command_hub.module
       code.context: common.context:context.module
       code.list_diff: common.list_diff:list_diff.module
+      code.view: ui.view:view.module
       services.mosaic: builtins:mosaic.service
       services.web: builtins:web.service
       tested.code.tabs: phony
